<resources>
    <string name="app_name">Kamus Bergambar</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="transport_text">Transport</string>
    <string name="hewan_text">Binatang</string>
    <string name="buah_text">Buah</string>
    <string name="profesi_text">Profesi</string>
    <string name="title">Pilih Kategori Kamus</string>
    <string-array name="title">
        <item>Mobil</item>
        <item>Speda Motor</item>
    </string-array>
</resources>
