<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center|center_horizontal|top">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.12"
        android:gravity="center|center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/title"
            android:id="@+id/title" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <Button
            android:id="@+id/transport_btn"
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:text="@string/transport_text"
            android:drawableLeft="@drawable/car"/>

        <Button
            android:id="@+id/hewan_btn"
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:text="@string/hewan_text"
            android:drawableLeft="@drawable/cat" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/tumbuhan_btn"
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:text="@string/buah_text"
            android:drawableLeft="@drawable/fruit"/>


        <Button
            android:id="@+id/profesi_btn"
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:text="@string/profesi_text"
            android:drawableLeft="@drawable/captain"/>

    </LinearLayout>


</LinearLayout>